@@ -1,0 +1,8 @@
+#' A data.frame containing election results from the 2012 US Presidential election.  
+#'
+#' @name df_president_2012
+#' @docType data
+#' @author US Federal Election Commission and Ari Lamstein
+#' @references Taken from \url{http://www.fec.gov/pubrec/fe2012/federalelections2012.shtml} on 3/15/2014. 
+#' @keywords data
+NULL
