@@ -41,8 +41,8 @@ render_zip_choropleth = function(choropleth.df, title="", scaleName="", states=s
       scale_color_continuous(scaleName, labels=comma) +
       geom_polygon(data = state_map_df, color = "black", fill = NA, aes(group=group));
     
-  } else {
-    stopifnot(length(levels(choropleth.df$value)) <= 9) # brewer scale only goes up to 9
+  } else { # assume character or factor
+    stopifnot(length(unique(choropleth.df$value)) <= 9) # brewer scale only goes up to 9
     
     ggplot(choropleth.df, aes(x=longitude, y=latitude,color=value)) + 
       geom_point() + 
